# hate

./: pyproject.toml  runner.ipynb
hate/: fbi.py
